WIP: Improve optimizer in BacktrackingSolver